--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "private": false,
   "dependencies": {
     "css-loader": "^0.28.11",
+    "csv-parse": "^2.5.0",
+    "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-vis": "^1.10.0",
@@ -24,6 +26,7 @@
     "babel-loader": "^8.0.0-beta",
     "eslint": "^5.0.1",
     "eslint-plugin-react": "^7.10.0",
+    "raw-loader": "^0.5.1",
     "webpack": "^4.13.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
