--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.0.0-beta.51",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
     "@babel/preset-react": "^7.0.0-beta.51",
+    "babel-eslint": "^8.2.5",
     "babel-loader": "^8.0.0-beta",
     "eslint": "^5.0.1",
     "eslint-plugin-react": "^7.10.0",
